src/includes/css/style.css
/* kevin-yellow : fee201 */
/* Hightlight-me-blue : 0173fe */
/* come on over yellow : e5d02f  */

/* last updated on 6/14 @ 18:06   */

body {
    background: #e9e9e9;
    font-size: 1.5em;
    font-family: sans-serif;
    line-height: 1.5;
    color: #eee;
    margin:0;
    background-image: url("https://digitalkdogg.github.io/src/includes/img/texture-bg.png");
}

.hidden {
	display:none;
}

.show {
	display:block;
}

button {
    background: #0173fe;
    color: white;
    border-radius: 5px;
    padding: 10px;
    border: none;
    font-size: 16px;
}

button:hover {
	cursor: pointer;
	opacity:.7;
}

div#header, div#the-guts, div#footer {
	padding: 10px 5%;
	clear: both;
}
div#header {
    height: 200px;
    background: #0173fe;
    padding-top:0;
    padding-bottom:0;
}

div#header.scrolled {
    position: fixed;
    width: 100%;
    height: 50px;
    z-index: 10;
    border-bottom: 1px solid black;
}

div#header.scrolled div#title-container {
  	height:100%;
}

div#header.scrolled div#title {
	border:none;
	margin-top: 10px;
}

div#header.scrolled div.phone, div#header.scrolled div.email {
	visibility: hidden;
}

div#header.scrolled div#logo-container {
	vertical-align: top;
	margin-top: -10px;
}

@media only screen and (max-width: 800px) {
	div#header.scrolled div#mobile-menu {
    	margin: 30px 5px 0;
	}
}


div#title-container {
    background: #fee201;
    width: 30%;
    margin: 0 15%;
    height:50%;
    color: #333;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    overflow:hidden;
}

@media only screen and (max-width: 1400px) {
    div#title-container {
        width:40%;
    }

}

div#title {
    border-bottom: 1px solid #333;
}

#header.scrolled #title-container {
	border-radius: 0;
}

#title-container .phone, #title-container .email {
    font-size: 16px;
}

div#text-container, div#logo-container {
    display: inline-block;
}

div#logo-container {
    width: 30%;
    vertical-align:super;
    font-size: 2em;
    color:#0173fe;
	text-align:center;
}

div#icon-container {
    float: right;
    position: relative;
    top: -60px;
    width: 500px;
    height: 60px;
}

div#icon-container div {
    display: inline;
    margin: 0 10px;
    opacity: .7;
}

div#icon-container div.bottom {
    top: 30px;
    position: relative;
}

div#header.scrolled div#icon-container div.bottom {
    top:10px;
}

@media only screen and (max-width: 1249px) {
    div#icon-container {
        top:0;
        left:-200px;
    }

}

@media only screen and (max-width: 1250px) and (min-width: 800px) {
    div#icon-container {
       top:0;
       text-align: center;
       left:-100px;
    }

    div#header.scrolled div#icon-container {
        display:none;
    }
}

@media only screen and (max-width: 800px) {
    div#icon-container {
       top:0;
       text-align: center;
       width:100%;
       left:0;
    }

    div#icon-container div {
        margin: 0 5px;
    }
}

@media only screen and (max-width: 380px) {
    div#icon-container i {
        font-size:20px;
    }

    div#icon-container img {
        width:24px;
        height: 24px;
    }
}

div#text-container {
	width:69%;
	height:100%;
	border-left: 1px solid black;
	text-indent:10px;
}

div#text-container a {
    color: black;
}

div#text-container div.phone a {
    text-decoration: none;
}

div#text-container div.email a:hover {
    color: #555;
}

@media only screen and (max-width: 1025px) {
  	div#title-container {
    	width:50%;
    	margin:0 20%;
	}
}

@media only screen and (max-width: 800px) {
    div#text-container div.phone a {
        text-decoration: underline;
    }
    

  	div#header.init div#title-container {
    	width:90%;
    	margin:0;
        float:right;
	}

	div#header.scrolled div#title-container {
		width: 65%;
		float: left;
		position: relative;
		left:15%;
	}

	div#logo-container {
		width:30%;
        font-size:1.7em;
	}

	div#header.scrolled #logo-container {
		display:none;
	}

	div#text-container {
		width: 64%;
		font-size: 18px;
	}
}

@media only screen and (max-width: 380px) {
    div#logo-container {
        font-size:1.4em;
    }

	#title-container div.phone, #title-container div.email {
		font-size:14px;
	}

    div#header.scrolled div#text-contianer #title {
        font-size:14px !important;
    }
}

#the-guts h2.title {
	border-bottom:1px solid white;
}

#the-guts .item {
	background:white;
	color:black;
	min-height:100px;
	padding: 20px 10px;
	font-size:16px;
}

#the-guts .project {
    height: 350px;
    width: 30%;
    background: #fee201;
    display:inline-grid;
    margin:1%;
    opacity: .8;
    border: 1px solid #0173fe;
    border-radius: 5px;
}

#the-guts .project .title {
    font-size: 1.5em;
    border-bottom: 1px solid #333;
    text-indent: 5px;
    height: 50px;
}

#the-guts .project .btn-container button {
    padding: 5px;
    margin: 5px;
    text-align: center;
    float: right;
}

#the-guts .project .desc {
    margin: 0 5px;
    height: 200px;
    overflow:hidden;
}

@media only screen and (max-width: 800px) {
	#the-guts .project {
		height:250px;
	}

	#the-guts .project .desc {
		height:150px;
	}
}

@media only screen and (max-width: 380px) {
	#the-guts .project {
		height:300px;
	}

	#the-guts .project .desc {
		height:200px;
	}
}

#the-guts .project .btn-container {
	height: 30px;
	border-top: 1px solid #333;
}

div#the-guts div#skills-container {
	text-align:center;
}

div#the-guts div#skills {
    display: inline-grid;
    width: 20%;
    margin: 0 10px;
    background: #ccc;
    padding: 0 10px;
    height: 235px;
    color: #555;
    text-align:left;
    border: 1px solid black;
}

div#the-guts div#skills div.skill {
    margin: 0 5px;
}

@media only screen and (max-width: 1024px) {
	div#the-guts div#skills {
		margin:5px;
		padding:5px;
		width:22%;
	}
}

@media only screen and (max-width: 800px) {
	div#the-guts div#skills {
    	display: block;
    	width: 95%;
    	text-align: left;
    }
}

div#the-guts div#skills h2 {
	font-size: 20px;
	border-bottom: 1px solid black;
}

div#the-guts div#skills .skill {
    height: 30px;
}

@media only screen and (max-width: 800px) {
	#the-guts .project {
		display:block;
		width:100%;
	}
}

div#desktop-menu {
    float: left;
    top: -80px;
    position: relative;
}


div#desktop-menu-container div#menu-item:hover {
    cursor: pointer;
    color: #e5d02f;
}

div#mobile-menu-container div#menu-item:hover {
	cursor: pointer;
	color: #555;
	opacity:1;
}


div#menu-container {
	display:contents;
}

#header #desktop-menu a#menu-item {
    color: white;
    text-decoration: none;
}

#header #mobile-menu a#menu-item {
	color:black;
	text-decoration: none;
}

#header.scrolled a#menu-item {
	color:black;
}

#header #mobile-menu-box span.line {
    display: block;
    border-top: 2px solid white;
    margin: 6px 3px 0;
}

div#desktop-menu.ismobile, div#desktop-menu.isdesktop.scrolled, div#desktop-menu.scrolled {
    display: none;
}

div#desktop-menu.isdesktop.init {
    display:block;
}


div#mobile-menu.isdesktop {
    display: none;
}

div#mobile-menu.ismobile, div#mobile-menu.isdesktop.scrolled {
    display:block;
}

div#mobile-menu-list.despanded {
	display:none;
}

div#mobile-menu-list.expanded {
	display:block;
}

div#header.init.isdesktop div#mobile-menu-container {
    display: none;
}


#header div#mobile-menu-box {
    width: 30px;
    height: 30px;
    border: 1px solid white;
    top: -40px;
    position: relative;
    left: -15px;
}

#header div#mobile-menu-box:hover {
	cursor: pointer;
	opacity:.5;
}

div#mobile-list-container {
    border: 1px solid white;
    position: relative;
    top: -110px;
    color: black;
    background: #fff;
    padding: 0 20px;
    left: -20px;
    display: inline-block;
}

div#active-menu-item {
    top: -75px;
    position: relative;
    left: 20px;
}


div#header.init div#mobile-menu.ismobile div#active-menu-item {
    display: none;
}


div#header.scrolled div#mobile-menu.ismobile div#active-menu-item {
    font-size:18px;
    margin: 5px;
}

@media only screen and (max-width: 380px) {
    div#header.scrolled div#mobile-menu.ismobile div#active-menu-item  {
        font-size:15px;
    }

    div#header.scrolled div#title {
        font-size: 15px;
    }

}


div#header.scrolled div#mobile-list-container {
	top: -75px;
	border: 1px solid black;
}


div#mobile-list-container div:hover {
    opacity:.7;
    cursor:pointer;
}

div#mobile-menu-list {
    width: 50%;
    opacity: .9;
    display:inline-block;
}

@media only screen and (max-width: 800px) {
	div#menu-container {
    	display: block;
    	position: relative;
    	top: 30%;
	}
}

#the-guts .project .btn-container button {
    background: #0173fe;
    border-radius: 5px;
    padding: 5px;
    color: white;
    font-size: 1em;
}

div#project-container {
    display: inline;
}

#the-guts .project .btn-container button:hover {
    cursor: pointer;
}

#contact-wrapper #btn-wrapper {
    text-align: center;
}

div#footer {
    padding: 0;
    background: white;
    color: black;
    font-size: 12px;
    text-align: center;
    margin: 15px 0 0;
    height: 40px;
}

div#modal {
    background: white;
    border: 1px solid #999;
    border-radius: 5px;
    min-height: 300px;
    position: fixed;
    top: 5%;
    min-width: 60%;
    margin: 0 10%;
    z-index: 10;
}

#the-guts #modal span#close {
    z-index: 1;
    position: relative;
    padding: 3px;
    background: #0173fe;
    color: white;
    left: -3px;
    border-radius: 20%;
    float: right;
    height: 20px;
    width:20px;
    text-align: center;
}

#the-guts #modal span#close:hover {
    cursor: pointer;
}

.modal-header {
    border-bottom: 1px solid #333;
    display: inline-flex;
    width: 100%;
    height:30px;
    background: #ccc;
    position: relative;
    top: -25px;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
}

h4.modal-title {
    margin: 0 40%;
    color: #333;
}

.modal-body {
    text-align: center;
}

div#img-wrapper {
    border-top: 1px solid #ccc;
    padding: 10px 0;
}

.modal-header button.close {
    width: 40px;
}

.modal-body {
    min-height: 200px;
    border-bottom:1px solid #333;
}

.modal-footer {
    text-align: right;
    margin: 10px;
}

#the-guts .project.moretocome {
    background: #ccc;
    border: 1px solid #333;
}

#the-guts .project.moretocome .btn-container {
    display: none;
}

